crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__beta__exact_application.snap
---
source: crates/nash-codegen/src/optimizer_tests/beta.rs
assertion_line: 40
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline\\n{}\\n--- core after\\n{}\\n--- candidate\\n{}\",\npretty(before), output(&baseline), pretty(after), output(&candidate)))"
---
--- unoptimized Core
(\x#1 : int -> let alias#2 : int = x#1 in
alias#2) 42
--- unoptimized UPLC
(program 1.1.0 [(lam x_1 [(lam alias_2 alias_2) x_1]) (con integer 42)])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
(\x#1 : int -> let alias#2 : int = x#1 in
alias#2) 42
--- baseline
--- uplc
(program 1.1.0 [(lam x_1 [(lam alias_2 alias_2) x_1]) (con integer 42)])
--- result
(con integer 42)
--- logs
[]
--- core after
42
--- candidate
--- uplc
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
