crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__beta__oversaturation_repeated_integer.snap
---
source: crates/nash-codegen/src/optimizer_tests/beta.rs
assertion_line: 40
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline\\n{}\\n--- core after\\n{}\\n--- candidate\\n{}\",\npretty(before), output(&baseline), pretty(after), output(&candidate)))"
---
--- unoptimized Core
(\x#1 : int -> trace "intermediate" in \y#2 : int -> addInteger x#1 x#1) 21 0
--- unoptimized UPLC
(program 1.1.0
  [[(lam x_1
    (force
      [[(force (builtin trace)) (con string "intermediate")]
        (delay (lam y_2 [[(builtin addInteger) x_1] x_1]))]))
    (con integer 21)]
    (con integer 0)])
--- optimized Core
let beta#5 : int -> int = trace "intermediate" in \y#4 : int -> addInteger 21 21 in
beta#5 0
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam beta_2 [beta_2 (con integer 0)])
      (force
        [[builtin_3 (con string "intermediate")]
          (delay (lam y_1 [[(builtin addInteger) (con integer 21)] (con integer 21)]))])])
    (force (builtin trace))])
--- isolated pass
--- core before
(\x#1 : int -> trace "intermediate" in \y#2 : int -> addInteger x#1 x#1) 21 0
--- baseline
--- uplc
(program 1.1.0
  [[(lam x_1
    (force
      [[(force (builtin trace)) (con string "intermediate")]
        (delay (lam y_2 [[(builtin addInteger) x_1] x_1]))]))
    (con integer 21)]
    (con integer 0)])
--- result
(con integer 42)
--- logs
["intermediate"]
--- core after
let beta#3 : int -> int = trace "intermediate" in \y#2 : int -> addInteger 21 21 in
beta#3 0
--- candidate
--- uplc
(program 1.1.0
  [(lam beta_3 [beta_3 (con integer 0)])
    (force
      [[(force (builtin trace)) (con string "intermediate")]
        (delay (lam y_2 [[(builtin addInteger) (con integer 21)] (con integer 21)]))])])
--- result
(con integer 42)
--- logs
["intermediate"]
