crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__beta__partial_capture.snap
---
source: crates/nash-codegen/src/optimizer_tests/beta.rs
assertion_line: 40
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline\\n{}\\n--- core after\\n{}\\n--- candidate\\n{}\",\npretty(before), output(&baseline), pretty(after), output(&candidate)))"
---
--- unoptimized Core
let partial#3 : int -> int = (\x#1 : int y#2 : int -> trace "unreachable body" in x#1) (trace "capture" in 42) in
0
--- unoptimized UPLC
(program 1.1.0
  [(lam partial_3 (con integer 0))
    [(lam x_1
      (lam y_2
        (force [[(force (builtin trace)) (con string "unreachable body")] (delay x_1)])))
      (force
        [[(force (builtin trace)) (con string "capture")] (delay (con integer 42))])]])
--- optimized Core
let anf#7 : int = trace "capture" in 42 in
0
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam anf_1 (con integer 0))
      (force [[builtin_2 (con string "capture")] (delay (con integer 42))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let anf#4 : int = trace "capture" in 42 in
let partial#3 : int -> int = (\x#1 : int y#2 : int -> trace "unreachable body" in x#1) anf#4 in
0
--- baseline
--- uplc
(program 1.1.0
  [(lam anf_4
    [(lam partial_3 (con integer 0))
      [(lam x_1
        (lam y_2
          (force [[(force (builtin trace)) (con string "unreachable body")] (delay x_1)])))
        anf_4]])
    (force
      [[(force (builtin trace)) (con string "capture")] (delay (con integer 42))])])
--- result
(con integer 0)
--- logs
["capture"]
--- core after
let anf#4 : int = trace "capture" in 42 in
let partial#3 : int -> int = \y#2 : int -> trace "unreachable body" in anf#4 in
0
--- candidate
--- uplc
(program 1.1.0
  [(lam anf_4
    [(lam partial_3 (con integer 0))
      (lam y_2
        (force
          [[(force (builtin trace)) (con string "unreachable body")] (delay anf_4)]))])
    (force
      [[(force (builtin trace)) (con string "capture")] (delay (con integer 42))])])
--- result
(con integer 0)
--- logs
["capture"]
